--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.5
+  intro_slider: ^4.2.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
@@ -87,4 +83,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
