--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_card_swiper: ^7.0.2
   flutter_local_notifications: ^19.0.0
   flutter_native_splash: ^2.4.5
+  intro_slider: ^4.2.1
+  shared_preferences: ^2.5.2
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
   http: ^1.3.0
@@ -46,7 +48,6 @@ dependencies:
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.5
-  shared_preferences: ^2.5.2
   sqflite: ^2.4.2
   sqflite_sqlcipher: ^3.1.0+1
   syncfusion_flutter_pdfviewer: ^29.1.33
