--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.5
+  flutter_neumorphic_plus: ^3.4.0
   intro_slider: ^4.2.1
   shared_preferences: ^2.5.2
 
