--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_card_swiper: ^7.0.2
   flutter_local_notifications: ^19.0.0
   flutter_native_splash: ^2.4.5
+  flutter_neumorphic_plus: ^3.4.0
   intro_slider: ^4.2.1
   shared_preferences: ^2.5.2
   flutter_riverpod: ^2.6.1
