--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
   flutter_card_swiper: ^7.0.2
   flutter_native_splash: ^2.4.5
   flutter_riverpod: ^2.6.1
+  flutter_secure_storage: ^9.2.4
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.5
+  shared_preferences: ^2.5.2
+  sqflite: ^2.4.2
+  sqflite_sqlcipher: ^3.1.0+1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
