Added integration with Auth0 + persistent login

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,15 +5,19 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
-		<string>Youllgetit Flutter</string>
+		<string>YoullGetIt</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>youllgetit.app</string>
+		</array>
 		<key>CFBundleName</key>
-		<string>youllgetit_flutter</string>
+		<string>youllgetit.app</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
