--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   build_runner: ^2.4.15
   cupertino_icons: ^1.0.8
   custom_lint: ^0.7.5
+  dotted_border: ^2.1.0
+  file_picker: ^9.2.1
   flutter:
     sdk: flutter
   flutter_card_swiper: ^7.0.2
