--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,13 @@ dependencies:
   flutter_native_splash: ^2.4.5
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
+  path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.5
   shared_preferences: ^2.5.2
   sqflite: ^2.4.2
   sqflite_sqlcipher: ^3.1.0+1
+  syncfusion_flutter_pdfviewer: ^29.1.33
 
 dev_dependencies:
   flutter_lints: ^5.0.0
