--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  build_runner: ^2.4.15
   auth0_flutter: ^1.9.0
+  build_runner: ^2.4.15
   cupertino_icons: ^1.0.8
   custom_lint: ^0.7.5
   dotted_border: ^2.1.0
@@ -40,6 +40,8 @@ dependencies:
   flutter_native_splash: ^2.4.5
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
+  http: ^1.3.0
+  path: ^1.9.1
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.5
@@ -47,6 +49,11 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_sqlcipher: ^3.1.0+1
   syncfusion_flutter_pdfviewer: ^29.1.33
+  workmanager:
+    git:
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      path: workmanager
+      ref: main
 
 dev_dependencies:
   flutter_lints: ^5.0.0
