--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_card_swiper: ^7.0.2
+  flutter_local_notifications: ^19.0.0
   flutter_native_splash: ^2.4.5
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
