--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,18 +40,19 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   flutter_native_splash: ^2.4.5
   flutter_neumorphic_plus: ^3.4.0
-  intro_slider: ^4.2.1
-  shared_preferences: ^2.5.2
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
   http: ^1.3.0
+  intro_slider: ^4.2.1
   path: ^1.9.1
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.5
+  shared_preferences: ^2.5.2
   sqflite: ^2.4.2
   sqflite_sqlcipher: ^3.1.0+1
   syncfusion_flutter_pdfviewer: ^29.1.33
+  url_launcher: ^6.3.1
   workmanager:
     git:
       url: https://github.com/fluttercommunity/flutter_workmanager.git
