--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intro_slider: ^4.2.1
   path: ^1.9.1
   path_provider: ^2.1.5
+  pointycastle: ^4.0.0
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.5
   shared_preferences: ^2.5.2
