--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   auth0_flutter: ^1.9.0
   build_runner: ^2.4.15
+  connectivity_plus: ^6.1.4
   cupertino_icons: ^1.0.8
   custom_lint: ^0.7.5
   dotted_border: ^2.1.0
