--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_neumorphic_plus: ^3.4.0
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
+  flutter_slidable: ^4.0.0
   http: ^1.3.0
   intro_slider: ^4.2.1
   path: ^1.9.1
