--- a/.github/workflows/android-apk-cicd.yml
+++ b/.github/workflows/android-apk-cicd.yml
@@ -33,17 +33,16 @@ jobs:
         flutter-version: '3.29.3'
         channel: 'stable'
         cache: true
+        cache-key: 'flutter-3.29.3'
         
-    - name: Cache Flutter dependencies
+    - name: Cache pub dependencies
       uses: actions/cache@v4
       with:
         path: |
           ~/.pub-cache
-          **/.dart_tool
-          **/.packages
-        key: flutter-deps-${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
+        key: pub-cache-${{ hashFiles('**/pubspec.lock') }}
         restore-keys: |
-          flutter-deps-${{ runner.os }}-
+          pub-cache-
         
     - name: Get dependencies
       run: flutter pub get
@@ -55,6 +54,8 @@ jobs:
         echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" >> android/key.properties
         echo "storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}" >> android/key.properties
         echo "keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}" >> android/key.properties
+        # Override gradle.properties to use CI Java home
+        sed -i 's|org.gradle.java.home=.*|org.gradle.java.home='$JAVA_HOME'|' android/gradle.properties
       
     - name: Build ${{ matrix.build-type.name }}
       run: ${{ matrix.build-type.command }}
