Fixed accepted licenses path

--- a/.github/workflows/android-apk-cicd.yml
+++ b/.github/workflows/android-apk-cicd.yml
@@ -48,7 +48,7 @@ jobs:
       run: flutter pub get
       
     - name: Accept Android SDK licenses
-      run: yes | sdkmanager --licenses
+      run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
       
     - name: Setup Android signing
       run: |
