--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,16 @@ dependencies:
     sdk: flutter
   flutter_card_swiper: ^7.0.2
   flutter_local_notifications: ^19.0.0
+  flutter_localization: ^0.3.2
+  flutter_localizations:
+    sdk: flutter
   flutter_native_splash: ^2.4.5
   flutter_neumorphic_plus: ^3.4.0
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
   flutter_slidable: ^4.0.0
   http: ^1.3.0
+  intl: 0.19.0
   intro_slider: ^4.2.1
   path: ^1.9.1
   path_provider: ^2.1.5
