--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_slidable: ^4.0.0
   http: ^1.3.0
+  in_app_review: ^2.0.10
   intl: 0.19.0
   intro_slider: ^4.2.1
   path: ^1.9.1
