--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/soft_skills.csv
+    - assets/hard_skills.csv
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
