--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Get Flutter dependencies
       run: flutter pub get
       
-    - name: Run tests
-      run: flutter test
+    # - name: Run tests
+    #   run: flutter test
       
     - name: Import Development Code-Signing Certificates
       uses: Apple-Actions/import-codesign-certs@v2
@@ -86,8 +86,8 @@ jobs:
     - name: Get Flutter dependencies
       run: flutter pub get
       
-    - name: Run tests
-      run: flutter test
+    # - name: Run tests
+    #   run: flutter test
       
     - name: Import Distribution Code-Signing Certificates
       uses: Apple-Actions/import-codesign-certs@v2
