Updated provisioning file

--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -42,6 +42,17 @@ jobs:
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
         
+    - name: Setup Code Signing (Development)
+      run: |
+        # Set code signing to manual for development
+        sed -i '' 's/CODE_SIGN_STYLE = Automatic;/CODE_SIGN_STYLE = Manual;/g' ios/Runner.xcodeproj/project.pbxproj
+        
+        # Add development provisioning profile to Debug configuration only
+        sed -i '' '/97C147061CF9000F007C117D \/\* Debug \*\/ = {/,/name = Debug;/{
+          /DEVELOPMENT_TEAM = "JPXGBUG6ZW";/a\
+        		PROVISIONING_PROFILE_SPECIFIER = "You'\''ll Get It - Development";
+        }' ios/Runner.xcodeproj/project.pbxproj
+        
     - name: Flutter Build iOS (Development)
       run: flutter build ios --release
       
@@ -103,6 +114,22 @@ jobs:
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+        
+    - name: Setup Code Signing (Production)
+      run: |
+        # Set code signing to manual for production
+        sed -i '' 's/CODE_SIGN_STYLE = Automatic;/CODE_SIGN_STYLE = Manual;/g' ios/Runner.xcodeproj/project.pbxproj
+        
+        # Add production provisioning profile to Release and Profile configurations
+        sed -i '' '/97C147071CF9000F007C117D \/\* Release \*\/ = {/,/name = Release;/{
+          /DEVELOPMENT_TEAM = "JPXGBUG6ZW";/a\
+        		PROVISIONING_PROFILE_SPECIFIER = "You'\''ll Get It";
+        }' ios/Runner.xcodeproj/project.pbxproj
+        
+        sed -i '' '/249021D4217E4FDB00AE95B9 \/\* Profile \*\/ = {/,/name = Profile;/{
+          /DEVELOPMENT_TEAM = "JPXGBUG6ZW";/a\
+        		PROVISIONING_PROFILE_SPECIFIER = "You'\''ll Get It";
+        }' ios/Runner.xcodeproj/project.pbxproj
         
     - name: Flutter Build iOS (Production)
       run: flutter build ios --release
