--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -58,29 +58,12 @@ jobs:
         
     - name: Setup Code Signing (Development)
       run: |
-        # Debug: Check current signing style
-        echo "Current CODE_SIGN_STYLE settings:"
-        grep -n "CODE_SIGN_STYLE" ios/Runner.xcodeproj/project.pbxproj || echo "No CODE_SIGN_STYLE found"
-        
-        # FIRST: Change all CODE_SIGN_STYLE from Automatic to Manual
-        echo "Changing CODE_SIGN_STYLE from Automatic to Manual..."
-        sed -i '' 's/CODE_SIGN_STYLE = Automatic;/CODE_SIGN_STYLE = Manual;/g' ios/Runner.xcodeproj/project.pbxproj
-        
-        # SECOND: Add provisioning profile (on separate lines)
-        echo "Adding provisioning profile..."
-        sed -i '' '/CODE_SIGN_STYLE = Manual;/a\
-                PROVISIONING_PROFILE_SPECIFIER = "You'\''ll Get It - Development";
-        ' ios/Runner.xcodeproj/project.pbxproj
-        
-        # Verify changes were made
-        echo "After changes - CODE_SIGN_STYLE lines:"
-        grep -n "CODE_SIGN_STYLE" ios/Runner.xcodeproj/project.pbxproj || echo "No CODE_SIGN_STYLE found"
-        
-        echo "After changes - PROVISIONING_PROFILE_SPECIFIER lines:"
-        grep -n "PROVISIONING_PROFILE_SPECIFIER" ios/Runner.xcodeproj/project.pbxproj || echo "No PROVISIONING_PROFILE_SPECIFIER found"
+        # Show available provisioning profiles
+        echo "Available provisioning profiles:"
+        ls -la ~/Library/MobileDevice/Provisioning\ Profiles/ || echo "No provisioning profiles directory found"
 
     - name: Flutter Build iOS (Development)
-      run: flutter build ios --release
+      run: flutter build ios --release --no-codesign
       
     - name: Build and Archive with Xcode (Development)
       run: |
@@ -91,6 +74,7 @@ jobs:
           -destination generic/platform=iOS \
           -archivePath $RUNNER_TEMP/Runner-Dev.xcarchive \
           archive \
+          CODE_SIGN_STYLE=Manual \
           CODE_SIGN_IDENTITY="iPhone Developer" \
           PROVISIONING_PROFILE_SPECIFIER="You'll Get It - Development"
           
@@ -159,27 +143,12 @@ jobs:
         
     - name: Setup Code Signing (Production)
       run: |
-        # Debug: Check current signing style
-        echo "Current CODE_SIGN_STYLE settings:"
-        grep "CODE_SIGN_STYLE" ios/Runner.xcodeproj/project.pbxproj || echo "No CODE_SIGN_STYLE found"
-        
-        # Set code signing to manual for ALL configurations
-        sed -i '' 's/CODE_SIGN_STYLE = Automatic;/CODE_SIGN_STYLE = Manual;/g' ios/Runner.xcodeproj/project.pbxproj
-        
-        # Add CODE_SIGN_STYLE = Manual if it doesn't exist
-        sed -i '' '/DEVELOPMENT_TEAM = "JPXGBUG6ZW";/a\
-        		CODE_SIGN_STYLE = Manual;' ios/Runner.xcodeproj/project.pbxproj
-        
-        sed -i '' '/CODE_SIGN_STYLE = Manual;/a\
-                PROVISIONING_PROFILE_SPECIFIER = "You'\''ll Get It";
-        ' ios/Runner.xcodeproj/project.pbxproj
-        
-        # Verify changes
-        echo "After changes:"
-        grep -A5 -B5 "PROVISIONING_PROFILE_SPECIFIER" ios/Runner.xcodeproj/project.pbxproj || echo "PROVISIONING_PROFILE_SPECIFIER not found"
+        # Show available provisioning profiles
+        echo "Available provisioning profiles:"
+        ls -la ~/Library/MobileDevice/Provisioning\ Profiles/ || echo "No provisioning profiles directory found"
         
     - name: Flutter Build iOS (Production)
-      run: flutter build ios --release
+      run: flutter build ios --release --no-codesign
       
     - name: Build and Archive with Xcode (Production)
       run: |
@@ -190,6 +159,7 @@ jobs:
           -destination generic/platform=iOS \
           -archivePath $RUNNER_TEMP/Runner-Prod.xcarchive \
           archive \
+          CODE_SIGN_STYLE=Manual \
           CODE_SIGN_IDENTITY="iPhone Distribution" \
           PROVISIONING_PROFILE_SPECIFIER="You'll Get It"
           
