--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -37,6 +37,19 @@ jobs:
       run: |
         cd ios
         pod install --repo-update
+        
+        # Fix SQLCipher duplicate bundle issue
+        echo "Fixing SQLCipher duplicate bundle issue..."
+        # Remove the conflicting resource bundle from FMDB-SQLCipher
+        sed -i '' '/FMDB-SQLCipher.*{$/,/^[[:space:]]*};$/{
+          /PRODUCT_BUNDLE_IDENTIFIER = org.cocoapods.SQLCipher;/d
+          /PRODUCT_NAME = SQLCipher;/d
+        }' Pods/Pods.xcodeproj/project.pbxproj
+        
+        # Fix SQLCipher duplicate target issue
+        echo "Fixing SQLCipher duplicate bundle issue..."
+        # Remove duplicate SQLCipher bundle target from FMDB-SQLCipher
+        sed -i '' '/PRODUCT_BUNDLE_IDENTIFIER = org.cocoapods.SQLCipher/d' Pods/Pods.xcodeproj/project.pbxproj
       
     # - name: Run tests
     #   run: flutter test
@@ -61,6 +74,11 @@ jobs:
         # Show available provisioning profiles
         echo "Available provisioning profiles:"
         ls -la ~/Library/MobileDevice/Provisioning\ Profiles/ || echo "No provisioning profiles directory found"
+        
+        # Find the development provisioning profile UUID
+        DEV_PROFILE_UUID=$(ls ~/Library/MobileDevice/Provisioning\ Profiles/ | grep ".mobileprovision" | head -1 | sed 's/.mobileprovision//')
+        echo "Development Profile UUID: $DEV_PROFILE_UUID"
+        echo "DEV_PROFILE_UUID=$DEV_PROFILE_UUID" >> $GITHUB_ENV
 
     - name: Flutter Build iOS (Development)
       run: flutter build ios --release --no-codesign
@@ -76,7 +94,7 @@ jobs:
           archive \
           CODE_SIGN_STYLE=Manual \
           CODE_SIGN_IDENTITY="iPhone Developer" \
-          PROVISIONING_PROFILE_SPECIFIER="You'll Get It - Development"
+          PROVISIONING_PROFILE_SPECIFIER="$DEV_PROFILE_UUID"
           
     - name: Export Development IPA
       run: |
@@ -147,6 +165,11 @@ jobs:
         echo "Available provisioning profiles:"
         ls -la ~/Library/MobileDevice/Provisioning\ Profiles/ || echo "No provisioning profiles directory found"
         
+        # Find the App Store provisioning profile UUID
+        PROD_PROFILE_UUID=$(ls ~/Library/MobileDevice/Provisioning\ Profiles/ | grep ".mobileprovision" | head -1 | sed 's/.mobileprovision//')
+        echo "Production Profile UUID: $PROD_PROFILE_UUID"
+        echo "PROD_PROFILE_UUID=$PROD_PROFILE_UUID" >> $GITHUB_ENV
+        
     - name: Flutter Build iOS (Production)
       run: flutter build ios --release --no-codesign
       
@@ -161,7 +184,7 @@ jobs:
           archive \
           CODE_SIGN_STYLE=Manual \
           CODE_SIGN_IDENTITY="iPhone Distribution" \
-          PROVISIONING_PROFILE_SPECIFIER="You'll Get It"
+          PROVISIONING_PROFILE_SPECIFIER="$PROD_PROFILE_UUID"
           
     - name: Export App Store IPA
       run: |
