--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -21,9 +21,6 @@ jobs:
       with:
         channel: 'stable'
         
-    - name: Get Flutter dependencies
-      run: flutter pub get
-
     - name: Clean iOS build
       run: |
         cd ios
@@ -33,7 +30,16 @@ jobs:
         rm -rf Flutter/Flutter.podspec
         rm -f Podfile.lock
         rm -rf build/
+        cd ..
         flutter clean
+
+    - name: Get Flutter dependencies
+      run: flutter pub get
+
+    - name: Prepare Flutter for iOS
+      run: |
+        flutter precache --ios
+        flutter build ios --config-only
         
     - name: Install CocoaPods dependencies with SQLCipher fix
       run: |
@@ -196,9 +202,6 @@ jobs:
       with:
         channel: 'stable'
         
-    - name: Get Flutter dependencies
-      run: flutter pub get
-
     - name: Clean iOS build
       run: |
         cd ios
@@ -208,7 +211,16 @@ jobs:
         rm -rf Flutter/Flutter.podspec
         rm -f Podfile.lock
         rm -rf build/
+        cd ..
         flutter clean
+
+    - name: Get Flutter dependencies
+      run: flutter pub get
+
+    - name: Prepare Flutter for iOS
+      run: |
+        flutter precache --ios
+        flutter build ios --config-only
         
     - name: Install CocoaPods dependencies with SQLCipher fix
       run: |
